# advanced-rag-example

./: .gitignore  README.md  advanced_rag_app.py  langchain_rag_app.py  pyproject.toml  requirements.txt
advanced/: answer.py  ingest.py
advanced_rag/: answer.py  ingest.py
langchain_rag/: answer.py  ingest.py
ror_kb/6.1/: action_controller_overview.md  action_view_form_helpers.md  action_view_overview.md  active_job_basics.md  active_model_basics.md  active_record_and_postgresql.md  active_record_associations.md  active_record_basics.md  active_record_migrations.md  active_record_validations.md  active_support_core_extensions.md  autoloading_and_reloading_constants__zeitwerk_mode_.md  configuring_rails_applications.md  guides.rubyonrails.org_v6.1.0_getting_started.html.2026-04-28T21_26_31.671Z.md  layouts_and_rendering_in_rails.md  multiple_databases_with_active_record.md  rails_internationalization__i18n__api.md  testing_rails_applications.md  using_rails_for_api_only_applications.md  working_with_javascript_in_rails.md
ror_kb/7.2/: guides.rubyonrails.org_v7.2_action_controller_overview.html.2026-04-19T20_38_37.411Z.md  guides.rubyonrails.org_v7.2_action_mailer_basics.html.2026-04-19T20_48_17.297Z.md  guides.rubyonrails.org_v7.2_active_job_basics.html.2026-04-19T20_48_41.202Z.md  guides.rubyonrails.org_v7.2_active_record_callbacks.html.md  guides.rubyonrails.org_v7.2_active_record_migrations.html.md  guides.rubyonrails.org_v7.2_active_record_validations.html.md  guides.rubyonrails.org_v7.2_association_basics.html.md  (+7 more)
withlangchain/: answer.py  ingest.py
(+85 files in other folders)
