[project]
name = "advanced-rag-example"
version = "0.1.0"
description = "Advanced RAG example using and without using Langchain"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.7",
    "dotenv>=0.9.9",
    "gradio>=6.12.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.29",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.83.0",
    "openai>=2.31.0",
]
